Expand testing to cover different configured specifications